# mizani

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  how-to-release.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  testing.yml
doc/: Makefile  bounds.rst  breaks.rst  changelog.rst  conf.py  formatters.rst  index.rst  installation.rst  labels.rst  palettes.rst  scale.rst  transforms.rst
doc/theme/static/bootstrap-3.3.6/css/: bootstrap.min.css
doc/theme/static/bootstrap-3.3.7/css/: bootstrap.min.css
doc/theme/static/bootstrap-3.4.1/css/: bootstrap.min.css
licences/: SCALES_LICENSE
mizani/: __init__.py  _colorbrewer.py  _version.py  bounds.py  breaks.py  formatters.py  labels.py  palettes.py  scale.py  transforms.py  typing.py  utils.py
mizani/_colors/: __init__.py  _named_color_values.py  hsluv.py  named_colors.py  utils.py
mizani/_colors/_colormaps/: __init__.py  _colormap.py  _cubehelix.py  _interpolated.py  _listed.py  _palette_interpolated.py  _segment_function.py  _segment_interpolated.py
mizani/_colors/_colormaps/_maps/: _interpolated.py  _listed.py  _palette_interpolated.py  _segment_function.py  _segment_interpolated.py
mizani/_colors/_palettes/: __init__.py  _palette.py
mizani/_colors/_palettes/brewer/: __init__.py  diverging.py  qualitative.py  sequential.py
mizani/_colors/_palettes/other/: qualitative.py
mizani/_core/: date_utils.py  dates.py  types.py
mizani/_datetime/: breaks.py  rounding.py  types.py  utils.py
mizani/_timedelta/: breaks.py  utils.py
mizani/colors/: __init__.py  _colormap.py  _cubehelix.py  _gradient.py  _listed.py  color_palette.py  crayon_rgb.py  hsluv.py  named_colors.py  xkcd_rgb.py
mizani/colors/brewer/: __init__.py  diverging.py  qualitative.py  sequential.py
mizani/colors/diverging/: __init__.py  _brewer.py
mizani/colors/qualitative/: __init__.py  _brewer.py
mizani/colors/sequential/: __init__.py  _brewer.py  _perceptually_uniform.py
mizani/tests/: test_bounds.py  test_breaks.py  test_formatters.py  test_hsluv.py  test_palettes.py  test_scale.py  test_transforms.py  test_utils.py
requirements/: dev.txt  doc.txt  rtd.txt
tests/: conftest.py  test_bounds.py  test_breaks.py  test_date_utils.py  test_dates.py  test_formatters.py  test_hsluv.py  test_labels.py  test_palettes.py  test_scale.py  test_transforms.py  test_utils.py
tests/colors/: test_cubehelix.py  test_gradient.py  test_hsluv.py  test_interpolated.py  test_listed.py  test_named_colors.py  test_segment_function.py  test_utils.py
tests/datetime/: test_breaks.py  test_rounding.py  test_utils.py
tests/timedelta/: test_breaks.py  test_utils.py
tools/: build_theme.sh  gha_check_semver.py  release-checklist-tpl.md  release-checklist.md  release-checklist.py  release.sh  term.py
