[metadata]
name = mizani
description = Scales for Python
url= https://github.com/has2k1/mizani
license = BSD (3-clause)
author = Hassan Kibirige
author_email = has2k1@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization

project_urls =
    Documentation = https://mizani.readthedocs.io/en/stable
    Source = https://github.com/has2k1/mizani
    Bug Tracker = https://github.com/has2k1/mizani/issues
    CI = https://github.com/has2k1/mizani/actions

[options]
packages = find:
install_requires =
    numpy>=1.19.0
    scipy>=1.5.0
    pandas>=1.3.5
    matplotlib>=3.5.0
    palettable
    backports.zoneinfo;python_version<"3.9"
    tzdata;platform_system=="Windows"
python_requires = >=3.8
zip_safe = False

[options.extras_require]
testing =
    flake8
    pytest-cov

doc =
    sphinx>=4.5.0
    numpydoc>=0.9.1

[flake8]
# Add E741,E743 to the defaults in 3.5.0
ignore = E121,E123,E126,E226,E24,E704,W503,W504,E741,E743
exclude = mizani/external
